# near-real-estate-app

./: .env  Cargo.toml  README.md  app.js  cloudinary.js  index.html  multer.js  package-lock.json  package.json  readme.md  saveapp.js  server.js
controller/: upload.controller.js
front end/: package.json
front end/public/: index.html
front end/src/: App.jsx
front end/src/components/: Carousel.jsx  HomeDisplay.jsx  MainPropertyDetails.jsx  MyProperties.jsx  Navbar.jsx  PropertyCard.jsx  SearchCard.jsx  accountIcon.scss  homeDisplay.css  myProperties.scss
front end/src/components/AccountIcon/: AccountIcon.jsx
front end/src/components/Home/: HomeDisplay.jsx
front end/src/components/ImageSlider/: Carousel.jsx  ImageSlider.jsx
front end/src/components/Properties/: PropertyCard.jsx
front end/src/components/SearchCard/: SearchCard.css
front end/src/pages/: AddProperty.jsx  AllProperties.jsx  EditAccount.jsx  Home.jsx  MyAccount.jsx  ViewProperty.jsx
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.jsx  config.js  index.html  index.js  utils.js
front-end/src/components/: ListProperties.jsx  NewProperty.jsx
front-end/src/pages/: AddProperty.jsx  AllProperties.jsx  EditAccount.jsx  Home.jsx  addProperty.scss
front-end/src/utils/: config.js  utils.js
image_upload/: app.js  index.html  package-lock.json  package.json
routes/: upload.routes.js
service/: upload.service.js
src/: lib.rs
src/wasm/: near_real_estate_app.wasm
utils/: errorHandler.js  file.js
(+6 files in other folders)
